# ESMA-6787

./: .gitignore  main.py  pyproject.toml
homeworks/exam-01/: exam-01.tex  problem2.ipynb  problem2.py
homeworks/exam-02/: exam-02.tex
homeworks/exam-02/code/: problem2a.py  problem2b.py  problem2c.py  problem2d.py  problem2e.py  problem3a.py  problem3c.py
homeworks/exam-02/extra/: code.ipynb  marketing.txt  problem2.ipynb  problem3.ipynb  problem4.ipynb
homeworks/homework-01/: homework-01.tex
homeworks/homework-02/: homework-02.tex
homeworks/homework-02/code/: prob6.R  prob6.py  prob7.py
homeworks/homework-03/: dentalplan.txt  homework-03.tex  problem5.ipynb  problem6.ipynb  problem7.ipynb  problem8.ipynb
notebooks/: scratch.ipynb
notebooks/chapter-02/: chapter-2.tex
notebooks/chapter-06/: chapter-06.tex  scratch.R
